--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ local.properties
 .idea/vcs.xml
 .idea/caches/build_file_checksums.ser
 .idea/caches/gradle_models.ser
+.idea/dictionaries/
 *.iml
 
 # OS-specific files
