--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.NavigationActivity"></activity>
+        <activity android:name=".activities.CafeMenuCategoryActivity"></activity>
+        <activity android:name=".activities.NavigationActivity" />
         <activity
             android:name=".activities.LaunchActivity"
             android:noHistory="true">
