Added Room title card view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.StaffMemberActivity"></activity>
         <activity android:name=".activities.CafeMenuItemActivity" />
+        <activity android:name=".activities.RoomActivity" />
         <activity
             android:name=".activities.LaunchActivity"
             android:noHistory="true">
