Altered activites layout- moved DashboardActivity into its own file.
Altered fragment_dashboard to include widgets at the bottom.

Added files dashboard_circle and dashboard_widget for use in fragment_dashboard.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="@string/urbanSciencesBuildingShorthand"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".activities.DashboardActivity"
+            android:label="Dashboard"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.NavigationActivity"
             android:label="@string/navigation"
             android:screenOrientation="portrait"
